My First HTML Assignment

--- a/html_assignment.html
+++ b/html_assignment.html
@@ -18,8 +18,11 @@
             table {
                 border: 2px solid rgb(20, 20, 20);
                 font-family: sans-serif;
-                font-size: 0.9rem;
+                font-size: 1.2rem;
                 letter-spacing: 1px;
+                height: 100px;
+                width: 1250px;
+                text-align: left;
             }
             a {
                 text-decoration: none;
@@ -58,32 +61,37 @@
         </div>
         <h1 style="background-color: brown; color: beige; text-align: center;" id="about-me_section">About Me Section</h1>
         <div>
-            <h2>Contact Form</h2>
+            <h1>Contact Form</h2>
             <form>
-                <div><label for="name">Name: <input type="text" id="name" name="name" required></label></div><br>
-                <div><label for="email" style="display: contents;">Email: <input type="email" id="email" name="email" required></label></div><br>
-                <div><label for="message" style="display: flex;">Message: <textarea id="message" name="message" required></textarea></label></div><br>
-                <div style="padding: 10px;"><button type="submit">Submit</button></div>
+                <div><label for="name">Name: <input type="text" id="name" name="name" placeholder="Input your name" required></label></div><br>
+                <div><label for="email" style="display: contents;">Email: <input type="email" id="email" name="email" placeholder="Input your email" required></label></div><br>
+                <div><label for="message" style="display: flex;">Message: <textarea id="message" name="message" placeholder="Type your message here" required></textarea></label></div><br>
+                <div style="padding: 3px;"><button type="submit">Submit</button></div>
             </form>
-            <br>
         </div>
             <table border="1" cellpadding="4" cellspacing="0">
-                <tr>
-                    <th>Movie</th>
-                    <th>Reason Why I Like It</th>
-                </tr>
-                <tr>
-                    <td>Mission Impossible</td>
-                    <td>I like it because of it's action</td>
-                </tr>
-                <tr>
-                    <td>Red Notice</td>
-                    <td>I like it because of it's plot twist</td>
-                </tr>
-                <tr>
-                    <td>Fast and Furious</td>
-                    <td>I like it because of it's action and the driving</td>
-                </tr>
+                <h2 style="text-align: center; text-decoration: underline;"><strong>A Table of My Favourite Movies</strong></h2>
+                <thead>
+                    <tr>
+                        <th>Movie</th>
+                        <th>Reason Why I Like It</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Mission Impossible</td>
+                        <td>I like it because of it's action</td>
+                    </tr>
+                    <tr>
+                        <td>Red Notice</td>
+                        <td>I like it because of it's plot twist</td>
+                    </tr>
+                    <tr>
+                        <td>Fast and Furious</td>
+                        <td>I like it because of it's action and the driving</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </body>
 </html>
