--- a/html_assignment.html
+++ b/html_assignment.html
@@ -3,6 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>My Personal Web Page</title>
         <style>
             .intro-div {
@@ -19,14 +21,17 @@
                 border: 2px solid rgb(20, 20, 20);
                 font-family: sans-serif;
                 font-size: 1.2rem;
-                letter-spacing: 1px;
-                height: 100px;
-                width: 1250px;
-                text-align: left;
+                letter-spacing: 0px;
+                width: 100%;
             }
             a {
                 text-decoration: none;
                 color: rgb(142, 8, 8);
+            }
+            body {
+                font-family: serif;
+                padding: 0px;
+                box-sizing: content-box;
             }
         </style>
     </head>
@@ -95,3 +100,7 @@
         </div>
     </body>
 </html>
+
+height: 100px;
+width: 1250px;
+text-align: left;
